applications/frontend/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: frontend
  namespace: frontend
  annotations:
    notifications.argoproj.io/subscribe.on-rollout-completed.email: "pandey.somnath007@gmail.com"
    notifications.argoproj.io/subscribe.on-rollout-aborted.email: "pandey.somnath007@gmail.com"
    notifications.argoproj.io/subscribe.on-analysis-run-failed.email: "pandey.somnath007@gmail.com"
    notifications.argoproj.io/subscribe.on-analysis-run-error.email: "pandey.somnath007@gmail.com"

spec:

  replicas: 3

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:
    
      imagePullSecrets:
        - name: dockerhub-secret

      containers:

        - name: nginx

          image: docker.io/cssp007143/flask-basic-app:sha-33976226e4869eaa54719ada8d4697b633124b08

          ports:

            - name: http
              containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: http

            initialDelaySeconds: 3
            periodSeconds: 5

  strategy:

    canary:

      stableService: frontend-stable

      canaryService: frontend-canary

      trafficRouting:

        nginx:
          stableIngress: frontend-ingress

      steps:

        - setWeight: 30

        - pause:
            duration: 10s

        - analysis:

            templates:

              - templateName: frontend-success-rate

        - setWeight: 65

        - pause:
            duration: 5s

        - analysis:

            templates:

              - templateName: frontend-success-rate

        - setWeight: 100
