applications/frontend/base/canary-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-canary
  namespace: frontend

spec:

  selector:
    app: frontend

  ports:

    - name: http
      port: 80
      targetPort: http
