applications/frontend/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:

  selector:
    app: frontend

  ports:

    - name: http
      port: 80
      targetPort: http

  type: ClusterIP
