applications/frontend/base/stable-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-stable
  namespace: frontend
  labels:
    app: frontend
    role: stable

spec:

  selector:
    app: frontend

  ports:

    - name: http
      port: 5000
      targetPort: http
