applications/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:

  ingressClassName: nginx

  rules:

    - host: demo.cssp.localhost

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: frontend-stable
                port:
                  number: 5000
